I really wanna try improving my design skills.

--- a/alt-imagery.html
+++ b/alt-imagery.html
@@ -27,7 +27,7 @@
     .screen {
       width: 335px;
       height: 600px;
-      background-image: url('https://i.imgur.com/6fTOxrh.png');
+      background-image: url('https://img.freepik.com/free-vector/elegant-home-screen-template-smartphone_23-2148736065.jpg?w=826&t=st=1708404949~exp=1708405549~hmac=5ff44e964d80fc7c22afec264dd70924be55b631653b44037cfe197df0e01139');
       background-size: cover;
       background-position: center;
       border-radius: 20px;
