lets try a wallpaper. Inserting blackSand.jpg

--- a/alt-imagery.html
+++ b/alt-imagery.html
@@ -27,7 +27,7 @@
     .screen {
       width: 335px;
       height: 600px;
-      background-image: url('https://img.freepik.com/free-vector/elegant-home-screen-template-smartphone_23-2148736065.jpg?w=826&t=st=1708404949~exp=1708405549~hmac=5ff44e964d80fc7c22afec264dd70924be55b631653b44037cfe197df0e01139');
+      background-image: url('blackSand.jpg');
       background-size: cover;
       background-position: center;
       border-radius: 20px;
@@ -61,7 +61,7 @@
       border-radius: 3px;
       transition: background-color 0.3s;
     }
-
+      
     .task button:hover {
       background-color: #d40b0b;
     }
