--- a/alt-imagery.html
+++ b/alt-imagery.html
@@ -61,7 +61,7 @@
       border-radius: 3px;
       transition: background-color 0.3s;
     }
-      
+
     .task button:hover {
       background-color: #d40b0b;
     }
@@ -90,6 +90,10 @@
     .task.alarm input[type="time"]:focus {
       background-color: #d40b0b;
     }
+
+    .list {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -102,6 +106,12 @@
           <input type="text" id="new-task" placeholder="Add a new task">
           <input type="time" id="new-alarm" placeholder="Set Alarm">
           <button onclick="addTask()">Add Task</button>
+          <button onclick="viewAllTasks()">View All Tasks</button>
+        </div>
+        <p id="message"></p>
+        <div class="list">
+          <h3>Task List</h3>
+          <ul id="task-list"></ul>
         </div>
       </div>
     </div>
