--- a/alt-imagery.html
+++ b/alt-imagery.html
@@ -145,6 +145,19 @@
     #modal th {
       background-color: #f4f4f4;
     }
+    .clock {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: Arial, sans-serif;
+      font-size: 4em;
+      color: white;
+      background-color: black;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+      width: fit-content;
+    }
   </style>
 </head>
 <body>
