--- a/alt-imagery.html
+++ b/alt-imagery.html
@@ -177,6 +177,7 @@
           <h3>Task List</h3>
           <ul id="task-list"></ul>
         </div>
+        <div class="clock" id="clock"></div>
       </div>
     </div>
   </div>
@@ -198,6 +199,8 @@
     <button onclick="deleteTask()">Delete</button>
     <button onclick="hideModal()">Close</button>
   </div>
+  
+
   <script src="to-do.js"></script>
 </body>
 </html>
