--- a/alt-imagery.html
+++ b/alt-imagery.html
@@ -23,6 +23,10 @@
       overflow: hidden;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
       position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      }
     }
 
     .screen {
@@ -145,19 +149,19 @@
     #modal th {
       background-color: #f4f4f4;
     }
-    .clock {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-      font-size: 4em;
-      color: white;
-      background-color: black;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-      width: fit-content;
-    }
+
+.clock {
+  font-family: Arial, sans-serif;
+  font-size: 2em; /* Changed from 4em to 2em */
+  color: white;
+  background-color: black;
+  padding: 10px; /* Changed from 20px to 10px */
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+  width: fit-content;
+}
+
   </style>
 </head>
 <body>
