--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="content" id="todo-list">
         <h2>To-Do List</h2>
         <div>
-          <input type="text" id="new-task" placeholder="Add a new task lazy ass.">
+          <input type="text" id="new-task" placeholder="Add a new task lazy ass...">
           <input type="time" id="new-alarm">
           <button onclick="addTask()">+</button>
           <audio id="alarmSound" src="https://github.com/nixxphi/to-do/blob/49400523c7f94fc1825c8811fdbacd415f123106/alarmAudio.mp3"></audio>
@@ -29,18 +29,12 @@
           <ul id="task-list"></ul>
         </div>
         <div id="clock" class="digital"></div>
-        <div id="clockAnalogue" class="analogue">
           <div class="clock">
-            <div id="hourHand" class="hand hour"></div>
-            <div id="minuteHand" class="hand minute"></div>
-            <div id="secondHand" class="hand second"></div>
           </div>
       </div>
     </div>
   </div>
   <script src="to-do.js">
   </script>
-    <script src="clock.js">
-    </script>
 </body>
 </html>
