That's it, I'm done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <input type="text" id="new-task" placeholder="Add a new task lazy ass...">
           <input type="time" id="new-alarm">
           <button onclick="addTask()">+</button>
-          <audio id="alarmSound" src="https://github.com/nixxphi/to-do/blob/49400523c7f94fc1825c8811fdbacd415f123106/alarmAudio.mp3"></audio>
+         
         </div>
         <p id="message"></p>
         <div class="list">
@@ -36,5 +36,6 @@
   </div>
   <script src="to-do.js">
   </script>
+  <audio id="alarmSound" src="path/to/alarmSound.mp3" preload="auto"></audio>
 </body>
 </html>
